--- a/css/default.css
+++ b/css/default.css
@@ -92,3 +92,22 @@ footer a {
 .agenda td:nth-child(2) {
     background-color: hsla(0, 0%, 80%, 0.5);
 }
+
+#serviceswrap {
+    background: url(../img/fayol-header.png) no-repeat center top;
+    margin-top: -10px;
+    padding-top: 20px;
+    text-align: center;
+    background-attachment: relative;
+    background-position: center center;
+    min-height: 400px;
+    width: 100%;
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
