--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,9 @@
   </head>
   <body>
     <header>
+     <div id="serviceswrap"> 
       <a href="#">Se<span class="first">mantics</span></a><a href="#">Re<span class="second">asoning</span></a><a href="#">Co<span class="third">ordination</span></a>
-    </header>
+      </div></header>
     <!-- <nav>
       <a href="/">Home</a>
     </nav> -->
