--- a/css/default.css
+++ b/css/default.css
@@ -22,7 +22,11 @@ body {
 
 header {
     max-width: 950px;
-    
+    margin: auto;
+    padding: 20px;  
+    color: #1f1c1c;
+    font-weight: bolder;
+    font-size: 2.5em;
     text-align: center;
     border-bottom: 1px solid lightgrey;
     
@@ -30,7 +34,7 @@ header {
     padding-top: 0px;
     vertical-align: text-top;
     color: #fff;
-    font-size: 80px;
+    font-size: 70px;
     font-weight: 400;
     letter-spacing: 10px;
     text-shadow: 5px 5px #666;
