--- a/css/default.css
+++ b/css/default.css
@@ -42,7 +42,7 @@ header {
 }
 
 header a {
-    color: lightgrey;
+    color: #1f1c1c;
     text-decoration: none;
 }
 
@@ -104,7 +104,7 @@ footer a {
 
 #serviceswrap {
     background: url(../img/fayol-header.png) no-repeat center top;
-    margin-top: -10px;
+    margin-top: 10px;
     padding-top: 20px;
     text-align: center;
     background-attachment: relative;
