--- a/css/default.css
+++ b/css/default.css
@@ -45,6 +45,7 @@ header a {
     color: #1f1c1c;
     text-decoration: none;
     margin-top: 30px;
+    padding-top: 30px;
 }
 
 header a span {
@@ -105,7 +106,7 @@ footer a {
 
 #serviceswrap {
     background: url(../img/fayol-header.png) no-repeat center top;
-    margin-top: 10px;
+    margin-top: -1px;
     padding-top: 20px;
     text-align: center;
     background-attachment: relative;
