--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,9 @@
   <body>
     <header>
      <div id="serviceswrap"> 
+       <div id="#headert">
       <a href="#">Se<span class="first">mantics</span></a><a href="#">Re<span class="second">asoning</span></a><a href="#">Co<span class="third">ordination</span></a>
+       </div>
       </div></header>
     <!-- <nav>
       <a href="/">Home</a>
