--- a/css/default.css
+++ b/css/default.css
@@ -66,6 +66,12 @@ header span.third {
     color: hsl(255, 30%, 80%);
 }
 
+
+.strong {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+}
+
 footer {
     max-width: 640px;
     margin: auto;
