--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,12 @@
     <footer>
       <p>
         SeReCo is funded by <a href="https://www.dfh-ufa.org/">DFH-UFA (French-German University)</a>.
+        <div class="row md">
+    <div id="afia" class="col-md-3 d-flex align-items-center justify-content-around"><a href="https://afia.asso.fr/"><img class="logo" src="img/Logos%20AFIA/Logo-AFIA-bleu-grand.png"></img></a></div>
+    <div id="imt"  class="col-md-3 d-flex align-items-center justify-content-around"><a href="https://imt.fr/"><img class="logo" src="img/IMT_logo_RVB72.jpg"></img></a></div>
+    <div id="emse" class="col-md-3 d-flex align-items-center justify-content-around"><a href="https://www.mines-stetienne.fr/"><img class="logo" src="img/logos-mines-ST.png"></img></a></div>
+    <div id="limos" class="col-md-3 d-flex align-items-center justify-content-around"><a href="https://limos.fr/"><img class="logo" src="img/logo_limos_coul_def.png"></img></a></div>
+</div>
       </p>
     </footer>
   </body>
