--- a/css/default.css
+++ b/css/default.css
@@ -135,3 +135,14 @@ footer a {
     padding-top: 25px;
     margin-left: -50px;
 }
+
+.row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
