--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
       <p>
         SeReCo is funded by <a href="https://www.dfh-ufa.org/">DFH-UFA (French-German University)</a>.
         <div class="row md">
-    <div id="afia" class="col-md-3 d-flex align-items-center justify-content-around"><a href="https://www.fau.de/"><img class="logo" src="img/Friedrich-Alexander-Universität_Erlangen-Nürnberg_logo.svg.png"></img></a></div>
-    <div id="imt"  class="col-md-3 d-flex align-items-center justify-content-around"><a href="https://www.kit.edu/"><img class="logo" src="img/800px-Logo_KIT.svg.png"></img></a></div>
+    <div><a href="https://www.fau.de/"><img class="logo" src="img/Friedrich-Alexander-Universität_Erlangen-Nürnberg_logo.svg.png"></img></a></div>
+    <div><a href="https://www.kit.edu/"><img class="logo" src="img/Logo_KIT.svg.png"></img></a></div>
     <div id="emse" class="col-md-3 d-flex align-items-center justify-content-around"><a href="https://www.mines-stetienne.fr/"><img class="logo" src="img/logos-mines-ST.png"></img></a></div>
     <div id="limos" class="col-md-3 d-flex align-items-center justify-content-around"><a href="https://limos.fr/"><img class="logo" src="img/logo_limos_coul_def.png"></img></a></div>
 </div>
