--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,9 @@
         <div class="row md">
     <div><a href="https://www.fau.de/"><img class="logo" src="img/Friedrich-Alexander-Universität_Erlangen-Nürnberg_logo.svg.png" height="60"></img></a></div>
     <div><a href="https://www.kit.edu/"><img class="logo" src="img/Logo_KIT.svg.png" height="60"></img></a></div>
-    <div id="emse" class="col-md-3 d-flex align-items-center justify-content-around"><a href="https://www.unisg.ch/"><img class="logo" src="img/Université_de_Saint-Gall_(logo).svg.png" height="60"></img></a></div>
-    <div id="limos" class="col-md-3 d-flex align-items-center justify-content-around"><a href="https://www.mines-stetienne.fr/"><img class="logo" src="img/logos-mines-ST.png"  height="60"></img></a></div>
+    <div><a href="https://www.unisg.ch/"><img class="logo" src="img/Université_de_Saint-Gall_(logo).svg.png" height="60"></img></a></div>
+    <div><a href="https://www.mines-stetienne.fr/"><img class="logo" src="img/logos-mines-ST.png"  height="80"></img></a></div>
+    <div><a href="https://www.univ-st-etienne.fr/"><img class="logo" src="img/mg/logo-univ-ste.png"  height="70"></img></a></div>
 </div>
       </p>
     </footer>
