--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     </section>
     <footer>
       <p> <div><a href="https://www.dfh-ufa.org/"><img class="logo" src="img/logo-ufa.png" height="70"></img></a></div>
-        SeReCo is funded by <a href="https://www.dfh-ufa.org/">DFH-UFA (French-German University)</a>.
+        SeReCo is funded by <a href="https://www.dfh-ufa.org/">DFH-UFA (French-German University)</a>.<br><br>
         <div class="row md">
     <div><a href="https://www.fau.de/"><img class="logo" src="img/Friedrich-Alexander-Universität_Erlangen-Nürnberg_logo.svg.png" height="40"></img></a></div>
     <div><a href="https://www.kit.edu/"><img class="logo" src="img/Logo_KIT.svg.png" height="60"></img></a></div>
