--- a/css/default.css
+++ b/css/default.css
@@ -142,8 +142,8 @@ footer a {
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
+    margin-right: auto;
+    margin-left: auto;
     text-align: center;
 }
 
