--- a/css/default.css
+++ b/css/default.css
@@ -141,7 +141,7 @@ footer a {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
-    justify-content: space-between
+    justify-content: space-between;
     flex-wrap: wrap;
     margin-right: auto;
     margin-left: auto;
