--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,14 +19,14 @@
       {{ content }}
     </section>
     <footer>
-      <p> <div><a href="https://www.dfh-ufa.org/"><img class="logo" src="img/logo-ufa.png" height="70"></img></a></div>
+      <p> <div><a href="https://www.dfh-ufa.org/"><img class="logo" src="/img/logo-ufa.png" height="70"></img></a></div>
         SeReCo is funded by <a href="https://www.dfh-ufa.org/">DFH-UFA (French-German University)</a>.<br><br>
      <div class="row">   
-    <div><a href="https://www.fau.de/"><img class="logo" src="img/Friedrich-Alexander-Universität_Erlangen-Nürnberg_logo.svg.png" height="40"></img></a></div>
-    <div><a href="https://www.kit.edu/"><img class="logo" src="img/Logo_KIT.svg.png" height="60"></img></a></div>
-    <div><a href="https://www.unisg.ch/"><img class="logo" src="img/Université_de_Saint-Gall_(logo).svg.png" height="40"></img></a></div>
-    <div><a href="https://www.mines-stetienne.fr/"><img class="logo" src="img/logos-mines-ST.png"  height="80"></img></a></div>
-    <div><a href="https://www.univ-st-etienne.fr/"><img class="logo" src="img/logo-univ-ste.png"  height="70"></img></a></div>
+    <div><a href="https://www.fau.de/"><img class="logo" src="/img/Friedrich-Alexander-Universität_Erlangen-Nürnberg_logo.svg.png" height="40"></img></a></div>
+    <div><a href="https://www.kit.edu/"><img class="logo" src="/img/Logo_KIT.svg.png" height="60"></img></a></div>
+    <div><a href="https://www.unisg.ch/"><img class="logo" src="/img/Université_de_Saint-Gall_(logo).svg.png" height="40"></img></a></div>
+    <div><a href="https://www.mines-stetienne.fr/"><img class="logo" src="/img/logos-mines-ST.png"  height="80"></img></a></div>
+    <div><a href="https://www.univ-st-etienne.fr/"><img class="logo" src="/img/logo-univ-ste.png"  height="70"></img></a></div>
      </div>
       </p>
     </footer>
