--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
       <a href="#">Se<span class="first">mantics</span></a><a href="#">Re<span class="second">asoning</span></a><a href="#">Co<span class="third">ordination</span></a>
        </div>
       </div></header>
-    <!-- <nav>
+    <<nav>
       <a href="/">Home</a>
-    </nav> -->
+    </nav>
     <section id="main">
       {{ content }}
     </section>
