--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,104 @@
       <a href="#">Se<span class="first">mantics</span></a><a href="#">Re<span class="second">asoning</span></a><a href="#">Co<span class="third">ordination</span></a>
        </div>
       </div></header>
-    <nav>
+    <-- <nav>
       <a href="/">Home</a>
-    </nav>
+    </nav> -->
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark" role="navigation">
+
+  <a class="navbar-brand" href="/pfia2022/">PFIA</a>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mr-auto">
+
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="dropdownconferences" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Conférences
+        </a>
+        <div class="dropdown-menu"  aria-labelledby="dropdownconferences">
+          <a class="dropdown-item" href="/pfia2022/conferences/apia">APIA</a>
+          <a class="dropdown-item" href="/pfia2022/conferences/cnia">CNIA</a>
+          <a class="dropdown-item" href="/pfia2022/conferences/ic">IC</a>
+          <a class="dropdown-item" href="/pfia2022/conferences/jfpc">JFPC</a>
+          <a class="dropdown-item" href="/pfia2022/conferences/jfpda">JFPDA</a>
+          <a class="dropdown-item" href="/pfia2022/conferences/jfsma">JFSMA</a>
+          <a class="dropdown-item" href="/pfia2022/conferences/jiaf">JIAF</a>
+          <a class="dropdown-item" href="/pfia2022/conferences/rjcia">RJCIA</a>
+          <a class="dropdown-item" href="/pfia2022/conferences/ia-region">IA Région</a>
+        </div>
+        </li>
+
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="dropdownjournees" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Journées
+        </a>
+        <div class="dropdown-menu"  aria-labelledby="dropdownjournees">
+          <a class="dropdown-item" href="/pfia2022/journees/eiah-ia">EIAH & IA</a>
+          <a class="dropdown-item" href="/pfia2022/journees/iot-ia">IoT & IA</a>
+          <a class="dropdown-item" href="/pfia2022/journees/resilience-ia">Résilience & IA</a> 
+          <a class="dropdown-item" href="/pfia2022/journees/sante-ia">Santé & IA</a>
+          <a class="dropdown-item" href="/pfia2022/journees/prolog50">Année Prolog</a>
+        </div>
+        </li>
+
+      
+         <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="dropdownateliers" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Ateliers
+        </a>
+        <div class="dropdown-menu"  aria-labelledby="dropdownateliers">
+          <a class="dropdown-item" href="/pfia2022/Ateliers/ACAI/">ACAI</a>
+          <a class="dropdown-item" href="/pfia2022/Ateliers/CECILIA/">CECILIA</a>
+          <a class="dropdown-item" href="/pfia2022/Ateliers/Decade/">Decade</a>
+          <a class="dropdown-item" href="/pfia2022/Ateliers/IN-OVIVE/">IN-OVIVE</a>
+          <a class="dropdown-item" href="/pfia2022/Ateliers/ROCED/">ROCED</a>          
+        </div>
+        </li>
+        
+        
+        <li class="nav-item"><a class="nav-link" href="/pfia2022/tutoriels">  
+             Tutoriels </a></li>
+
+        
+        <li class="nav-item"><a class="nav-link" href="/pfia2022/invites">  
+            <i class="fa fa-child"></i>  Invités </a></li>
+        
+        
+        
+        <!--<li class="nav-item"><a class="nav-link" href="/colleges">  
+             Collèges </a></li>-->
+        
+        <li class="nav-item"><a class="nav-link" href="/pfia2022/programme">  
+             Programme général </a></li>
+
+
+
+        <!--<li class="nav-item"><a class="nav-link" href="/inscriptions">  
+            Inscriptions </a></li>-->
+
+
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="dropdowninfos-locales" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Informations pratiques 
+        </a>
+        <div class="dropdown-menu"  aria-labelledby="dropdowninfos-locales">
+          <a class="dropdown-item" href="/pfia2022/infos-locales/lieu">Lieu de la plate-forme</a>
+          <a class="dropdown-item" href="/pfia2022/infos-locales/inscriptions">Inscriptions</a>
+          <a class="dropdown-item" href="/pfia2022/infos-locales/hebergement">Hébergement</a>
+          <a class="dropdown-item" href="/pfia2022/infos-locales/evenements-sociaux">Événements sociaux</a>
+          <a class="dropdown-item" href="/pfia2022/organisation/">Organisation</a>
+        </div> 
+        </li>
+
+
+      </ul>
+    </div> 
+</nav>
+
     <section id="main">
       {{ content }}
     </section>
