--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>SeReCo | {{ page.title }}</title>
     <link rel="stylesheet" href="/css/default.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
   </head>
   <body>
     <header>
