--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,36 +13,13 @@
       <a href="#">Se<span class="first">mantics</span></a><a href="#">Re<span class="second">asoning</span></a><a href="#">Co<span class="third">ordination</span></a>
        </div>
       </div></header>
-    <-- <nav>
+    <!--<nav>
       <a href="/">Home</a>
     </nav> -->
   <nav class="navbar navbar-expand-md navbar-dark bg-dark" role="navigation">
 
   <a class="navbar-brand" href="/">Home</a>
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav mr-auto">
-
-        <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdownconferences" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Conférences
-        </a>
-        <div class="dropdown-menu"  aria-labelledby="dropdownconferences">
-          <a class="dropdown-item" href="/pfia2022/conferences/apia">APIA</a>
-          <a class="dropdown-item" href="/pfia2022/conferences/cnia">CNIA</a>
-          <a class="dropdown-item" href="/pfia2022/conferences/ic">IC</a>
-          <a class="dropdown-item" href="/pfia2022/conferences/jfpc">JFPC</a>
-          <a class="dropdown-item" href="/pfia2022/conferences/jfpda">JFPDA</a>
-          <a class="dropdown-item" href="/pfia2022/conferences/jfsma">JFSMA</a>
-          <a class="dropdown-item" href="/pfia2022/conferences/jiaf">JIAF</a>
-          <a class="dropdown-item" href="/pfia2022/conferences/rjcia">RJCIA</a>
-          <a class="dropdown-item" href="/pfia2022/conferences/ia-region">IA Région</a>
-        </div>
-        </li>
+  <a class="navbar-brand" href="/">Spring Workshop 2022</a>
 
        </nav>
 
