--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,8 @@
     </nav> -->
   <nav class="navbar navbar-expand-md navbar-dark bg-dark" role="navigation">
 
-  <a class="navbar-brand" href="/">Home</a>
-  <a class="navbar-brand" href="/">Spring Workshop 2022</a>
+  <a class="navbar-brand" href="/">Home</a> |
+  <a class="navbar-brand" href="/2022/spring-workshop">Spring Workshop 2022</a> |
 
        </nav>
 
