--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <!--<nav>
       <a href="/">Home</a>
     </nav> -->
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark" role="navigation">
+  <nav>
 
   <a class="navbar-brand" href="/">Home</a> |
   <a class="navbar-brand" href="/2022/spring-workshop">Spring Workshop 2022</a> |
