--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3943,7 +3943,7 @@ tbody.collapse.show {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  padding: 0.5rem 1rem;
+  padding: 1px 20px;
 }
 
 .navbar > .container,
