--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     </nav> -->
   <nav class="navbar navbar-expand-md navbar-dark bg-dark" role="navigation">
 
-  <a class="navbar-brand" href="/">Home</a>|&nbsp;<a class="navbar-brand" href="/2022/spring-workshop">Spring Workshop 2022</a>|
+  <a class="navbar-brand" href="/">Home</a>|&nbsp;<a class="navbar-brand" href="/2022/spring-workshop">Spring Workshop 2022</a>|&nbsp;<a class="navbar-brand" href="/2023/summer-workshop">Summer Workshop 2023</a>|
 
        </nav>
 
