--- a/css/default.css
+++ b/css/default.css
@@ -89,8 +89,12 @@ footer a {
 }
 
 .agenda td {
-    height: 3em;
     padding: 5px;
+    vertical-align: top;
+}
+
+.agenda td p:last-child {
+    margin-bottom: 0;
 }
 
 .agenda td:nth-child(1) {
