--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,7 @@
             <a class="dropdown-item" href="/2022/spring-workshop">Spring Workshop 2022</a>
             <a class="dropdown-item" href="/2023/summer-workshop">Summer Workshop 2023</a>
             <a class="dropdown-item" href="/2024/autumn-workshop">Autumn Workshop 2024</a>
+            <a class="dropdown-item" href="/2025/autumn-workshop">Autumn Workshop 2025</a>
           </div>
         </li>
       </ul>
@@ -50,7 +51,8 @@
     <a class="navbar-brand" href="/2022/spring-workshop">Spring Workshop
       2022</a>|&nbsp;
     <a class="navbar-brand" href="/2023/summer-workshop">Summer Workshop 2023</a>|&nbsp;
-    <a class="navbar-brand" href="/2024/autumn-workshop">Autumn Workshop 2024</a>
+    <a class="navbar-brand" href="/2024/autumn-workshop">Autumn Workshop 2024</a>|&nbsp;
+    <a class="navbar-brand" href="/2025/autumn-workshop">Autumn Workshop 2025</a>
   </nav> -->
 
   <section id="main">
