--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
         <br><br>
         <div class="row">
           <div><a href="https://www.fau.de/"><img class="logo"
-                src="/img/Friedrich-Alexander-Universität_Erlangen-Nürnberg_logo.svg.png" height="40"></img></a></div>
+                src="/img/fau-logo.svg.png" height="40"></img></a></div>
           <div><a href="https://www.kit.edu/"><img class="logo" src="/img/Logo_KIT.svg.png" height="60"></img></a></div>
           <div><a href="https://www.unisg.ch/"><img class="logo" src="/img/Université_de_Saint-Gall_(logo).svg.png"
                 height="40"></img></a></div>
