add cote d'azur logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,14 +68,16 @@
       SeReCo is funded by <a href="https://www.dfh-ufa.org/">DFH-UFA (French-German University)</a>.
         <br><br>
         <div class="row">
-          <div><a href="https://www.fau.de/"><img class="logo"
-                src="/img/fau-logo.svg.png" height="40"></img></a></div>
-          <div><a href="https://www.kit.edu/"><img class="logo" src="/img/Logo_KIT.svg.png" height="60"></img></a></div>
-          <div><a href="https://www.unisg.ch/"><img class="logo" src="/img/Université_de_Saint-Gall_(logo).svg.png"
+            <div><a href="https://univ-cotedazur.fr/"><img class="logo"
+                  src="/img/UCA-Logo.png" height="40"></img></a></div>
+            <div><a href="https://www.fau.de/"><img class="logo"
+                  src="/img/fau-logo.svg.png" height="40"></img></a></div>
+            <div><a href="https://www.kit.edu/"><img class="logo" src="/img/Logo_KIT.svg.png" height="60"></img></a></div>
+            <div><a href="https://www.unisg.ch/"><img class="logo" src="/img/Université_de_Saint-Gall_(logo).svg.png"
                 height="40"></img></a></div>
-          <div><a href="https://www.mines-stetienne.fr/"><img class="logo" src="/img/logos-mines-ST.png"
+            <div><a href="https://www.mines-stetienne.fr/"><img class="logo" src="/img/logos-mines-ST.png"
                 height="60"></img></a></div>
-          <div><a href="https://www.univ-st-etienne.fr/"><img class="logo" src="/img/logo-univ-ste.png"
+            <div><a href="https://www.univ-st-etienne.fr/"><img class="logo" src="/img/logo-univ-ste.png"
                 height="70"></img></a></div>
         </div>
     </p>
