--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
             <div><a href="https://univ-cotedazur.fr/"><img class="logo"
                   src="/img/UCA-Logo.png" height="40"></img></a></div>
             <div><a href="https://www.fau.de/"><img class="logo"
-                  src="/img/fau-logo.svg.png" height="40"></img></a></div>
+                  src="/img/fau-logo.png" height="40"></img></a></div>
             <div><a href="https://www.kit.edu/"><img class="logo" src="/img/Logo_KIT.svg.png" height="60"></img></a></div>
             <div><a href="https://www.unisg.ch/"><img class="logo" src="/img/Université_de_Saint-Gall_(logo).svg.png"
                 height="40"></img></a></div>
